ngrx, done : retrieve, del, show total items

--- a/src/app/extra/extra.component.html
+++ b/src/app/extra/extra.component.html
@@ -1,4 +1,4 @@
 <div>
-    <i><b>0 / 4</b> items left...</i>
+    <i><b>{{completedItems}} / {{ (todos | async)?.length }}</b> items left...</i>
     <button class="btn btn-info float-right">Sort Date</button>
 </div>
